音声を扱う章を追加

--- a/OpenGL3D_2023_11.md
+++ b/OpenGL3D_2023_11.md
@@ -711,7 +711,9 @@ C++20において、文字コードを指定するプレフィックスには以
 <img src="images/11_result_4_color_buffer.jpg" width="45%"/>
 </p>
 
-このように、適切に設定したビルボードを使うと、明かりの周囲がほんのり輝く様子を再現することができます。明かりと同様に境界のはっきりしない「煙」や「炎」なども、ビルボードなら簡単に表現することが可能です。
+ビルボードの特徴は「常にカメラの方を向く」ことです。今回はこの特徴を利用して、「光が周囲の塵やホコリに反射して空間がぼんやりと明るくなる様子」を表現しました。
+
+実際に、ビルボードは「境界のはっきりしない光や煙、炎などを表現する手段」として、多くのゲームで利用されます。
 
 ### 2.6 深度バッファへの書き込みを禁止する
 
@@ -1047,7 +1049,7 @@ T uniform_real_distribution::operator()(乱数生成オブジェクト);
 +霧			3x2		2	1.5	0
 ```
 
-霧ジェネレータの座標は、マップに合わせて変更してください。名前に指定した`3x2`(さん・エックス・に)というのは、霧を発生させる範囲を表しています。
+霧ジェネレータの座標は、マップに合わせて変更してください。名前に指定した`3x2`(さん・エックスt・に)というのは、霧を発生させる範囲を表しています。
 
 続いて、マップデータから霧ジェネレータを作成するプログラムを追加します。まずは`MainGameScene.cpp`を開き、`Mist.h`をインクルードしてください。
 
@@ -1099,25 +1101,313 @@ T uniform_real_distribution::operator()(乱数生成オブジェクト);
 
 >**【2章のまとめ】**
 >
->* ビルボードを使うと、輪郭のはっきりしない光や煙、炎のような半透明の物体を表現することができる。
+>* ビルボードの「常にカメラの方を向く」、輪郭のはっきりしない光や煙、炎のような半透明の物体を表現することができる。
 >* 不透明モデルと半透明モデルの両方を適切に描画するには、先に不透明モデルを描画し、その後で半透明モデルを描画する。
 >* 半透明モデル同士の描画を正しく処理するには、「深度バッファへの書き込みを禁止する」という方法がある。
->* 乱数を生成するには`mt19937`クラスを使う。範囲を制限するには`uniform_real_distribution`クラスを使う。
+>* 乱数を生成するには`mt19937`クラスを使う。指定した範囲の乱数を作るには、`uniform_real_distribution`クラスを組み合わせて使う。
 
 <div style="page-break-after: always"></div>
 
-## 3. 
+## 3. 音声再生
 
-### 2.1 
+### 3.1 音声ライブラリを追加する
 
+ゲームは、プレイヤーへのフィードバックの多くの部分を音声に頼っています。まるで本物のような映像を作り出せたとしても、それだけではプレイヤーを没入させるのは難しいものです。
 
+例としてテレビ番組を考えてみましょう。みなさんがテレビ番組を見る時、音声は当然スピーカーから再生されています。しかし、みなさんの感覚では、画面の中の人物の口元から発声されているかのように感じていると思います。
 
+これは、人間にとって聴覚よりも視覚が優先的な情報源であるからこそ起こる現象です。一方で、音量を0にして番組を視聴すると、番組の内容がほとんど分からなくなってしまいます(環境映像のようなものは除いて)。
 
->**【2章のまとめ】**
+これらのことは、人間の情報伝達において、聴覚がいかに重要であるかを示しています。そして、音声の重要性は、ゲームにおいても変わりません。そこで、プロジェクトに音声ライブラリを追加して、音声を再生できるようにしましょう。
+
+<pre class="tnmai_assignment">
+<strong>【課題13】</strong>
+ブラウザで以下のURLを開き、音声ライブラリのZIPファイルをダウンロードしなさい。
+  <code>https://github.com/tn-mai/OpenGL3D2023/blob/main/doc/EasyAudio.zip</code>
+
+EasyAudio.zipファイルには、以下の2つのファイルが格納されています。
+ - EasyAudio.cpp
+ - EasyAudio.h
+
+プロジェクトの<code>Src/Engine</code>フォルダ内に<code>EasyAudio</code>フォルダを作成し、その中に上記の2つのファイルをコピーしなさい。
+</pre>
+
+音声ライブラリのファイルをコピーしたら、Visual Studioのソリューションエクスプローラーにある「ソースファイル」フィルタを右クリックして「追加→既存の項目」を選択します。そして、先程コピーした2つのファイルをプロジェクトに追加してください。
+
+これで音声ライブラリが追加されました。
+
+### 3.2 音声ライブラリの処理を追加する
+
+`EasyAudio`クラスで音声を再生するには、「ライブラリの初期化」、「ライブラリの更新」、「ライブラリの終了」という3つの関数を呼び出す必要があります。
+
+その前に、ヘッダファイルをインクルードしましょう。`Engine.cpp`を開き、`EasyAudio.h`をインクルードしてください。
+
+```diff
+ * @file Engine.cpp
+ */
+ #include "Engine.h"
++#include "EasyAudio/EasyAudio.h"
+
+ #pragma warning(push)
+ #pragma warning(disable:4005)
+```
+
+次に、`Run`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+   if (result) {
+     return result;
+   }
++
++  // 音声ライブラリを初期化
++  if ( ! EasyAudio::Initialize()) {
++    return 1; // 初期化失敗
++  }
+
+   while (!glfwWindowShouldClose(window)) {
+     Update();
+     Render();
+     RemoveDestroyedGameObject();
+
++    // 音声ライブラリを更新
++    EasyAudio::Update();
+   }
++
++  // 音声ライブラリを終了
++  EasyAudio::Finalize();
+
+   glfwTerminate();
+   return 0;
+```
+
+これで、音声を再生できるようになりました。
+
+### 3.3 音声を用意する
+
+音声ライブラリだけでは音声を再生することはできません。なぜなら、音声ファイルが必要だからです。
+
+ということで、適当にゲームで使う音声を都合しなくてはなりません。とりあえず以下の表にある音声を用意してください。
+
+| 分類   | 音声の用途 |
+|:------:|:-----|
+| BGM    | タイトル画面のBGM |
+| BGM    | ゲームプレイ中のBGM |
+| 効果音 | ボタンをクリックしたときの効果音 |
+| 効果音 | ドアが開くときの効果音 |
+| 効果音 | レバーが動くときの効果音 |
+| 効果音 | ゴールに到達したとき(ゲームクリア)の効果音 |
+| 効果音 | 敵につかまったとき(ゲームオーバー)の効果音 |
+
+>**【音声ライブラリで再生可能な形式】**<br>
+>`WAV`, `MP3`, `AAC`, `WMA`に対応しています。`OGG`などには対応していません。<br>
+>また、ビットレートの高いMP3は再生できないことが多いです。MP3が再生されない場合は、変換ツール(`MP3 変換 オンライン`等で検索)でビットレートを128kbpsにすると、再生できる可能性があります。
+
+<pre class="tnmai_assignment">
+<strong>【課題14】</strong>
+プロジェクトの<code>Res</code>フォルダに<code>Audio</code>というフォルダを作成しなさい。
+次に、上の表にある用途に適した音声ファイルを、適当なサイトからダウンロードし(自分で作成してもよいでしょう)、<code>Audio</code>フォルダに配置しなさい。
+
+重要: 著作権表記用のテキストファイルを作成し、ダウンロードしたすべての音声について著作権表記を行うこと。
+</pre>
+
+>**【フリーのサウンドデータを公開しているサイトについて】**<br>
+>音声(に限りませんが)は、ゲーム内容に合っていて、かつ他ではあまり使われていないものを選ぶべきです。就職作品を審査する人々は同じような作品をいくつも見ているため、みんなが使うような音声は聞き飽きているからです。特に、国内で有名な個人サイトの音声などは聞き飽きていると考えてください。
 >
->* 
->* 
->* 
->* 
+>おすすめの方法は、「投稿型サイト」または「国外のサイト」を利用することです。`dova-s.jp`や`soundcloud.com`のような投稿型サイトはファイル数が多いので、他人と同じ音声を使う可能性がかなり低くなります。国外のサイトは「英語で書かれている」ために日本からの利用者が少ないので、国内の他の就職作品と同じ音声になる可能性が低いです。
+>
+>以下に、高品質なフリーのサウンドデータを公開しているサイトをいくつか挙げておきます。これらのサイトからダウンロードしたファイルは、音声作業用フォルダを作り、さらにサイト名をつけたサブフォルダを作って、そのなかにまとめておくとよいでしょう。
+>
+>\[BGM(投稿型サイト)\]
+>
+>* `dova-s.jp`: 国内では最大規模の投稿型サイト。ゲーム用を想定した音声ファイルも数多く投稿されています。大量の音声ファイルがあるので、まず重複することはないでしょう。
+>* `soundcloud.com`: 世界最大規模の音楽投稿型サイト。有料、無料を見分けにくいうえにボーカルありとなしが混在しているため、BGMの検索には慣れが必要です。しかし、圧倒的な投稿数はそれを補ってあまりあるほど魅力的です。
+>
+>\[BGM(海外の個人サイト)\]
+>
+>* `soundimage.org`: Eric Matyas(エリック・マティアス)氏のサイト。ゲーム開発者向けの無料の音楽や効果音、テクスチャなどが公開されています。右のリストから好きなジャンルを選んで音楽を探してください。プレイヤーの下に表示される曲名を右クリックしてダウンロードします。
+>* `incompetech.filmmusic.io`: Kevin MacLeod(ケビン・マクロード)氏のサイト。映画やゲーム向けの無料の音楽が公開されています。左の`Search`(サーチ)または`Genres`(ジャンル)を選んで音楽を探してください。
+>* `bensound.com`: Benjamin Tissot(ベンジャミン・ティソ)氏のサイト。映画やゲーム向けの無料の音楽が公開されています。`DOWNLOAD`(ダウンロード)と表示されているのが無料の音楽です。
+>
+>\[効果音\]
+>
+>* `www.fesliyanstudios.com`: David Fesliyan(デイビッド・フェスリアン)氏の個人サイトで、映画やゲーム向けの音楽と効果音が公開されています。
+>* `freesound.org`: スペインのポンペウ・ファブラ大学の音楽技術グループが管理運営している音声投稿サイトです。23万を超える大量の音声が投稿されています。品質にバラつきはありますが、大抵の効果音が見つかります。
+>
+>\[オンラインで効果音を作成できるサイト\]
+>
+>* `sfbgames.itch.io/chiptone`: レトロゲーム風の効果音を生成できます。エフェクターを調整すると音色を調整できますが、少し扱いが難しいです。オフラインで使えるダウンロード版があります。効果音を保存するには、右側にある黒い「SAVE .WAV」ボタンを押します。
+>* `sfxr.me`: レトロゲーム風の効果音を生成できるサイトです。左のプリセットボタンをクリックするとランダムな効果音が作成されます。右側の青字で書かれたWAVファイルを右クリックしてダウンロードします。
+>* `www.leshylabs.com/apps/sfMaker`: こちらもレトロゲーム風の効果音を生成してくれるサイトです。左のプリセットボタンをクリックするとランダムな効果音が作れます。右側の`Save Wave`ボタンからダウンロードします。
 
-<div style="page-break-after: always"></div>
+### 3.4 音声定義ファイルを追加する
+
+音声を再生するときは「音声ファイル名」を指定します。ただ、プログラム中に直接ファイル名を書くのはおすすめできません。同じ音声を再生するたびにファイル名を書くのは非効率ですし、打ち間違える可能性が増えるからです。
+
+例えば「ボタンクリックの効果音」用に`button_click.wav`という名前の音声ファイルがあるとしましょう。ゲームではいろんなものを爆発させるので、コードのあちこちに`button_click.wav`と書くことになります。
+
+2, 3カ所程度ならともかく、何度も何度も書いていると、`bottun_click.wav`や`buttonclick.wav`のように<ruby>綴<rt>つづ</rt></ruby>りを間違える可能性が高まります。その結果、音声がならなかったり、間違った音声が再生されたりすることになります。
+
+このような間違いを防ぐには、音声ファイル名を示す「定数」を定義して、ファイル名の代わりに定数を使います。定数には入力補完が働きますし、名前を間違えるとコンパイルエラーになるのですぐ分かります。
+
+>定数を使っても「別の定数名を書いてしまう」という間違いは検出できませんが、他のミスは防げるので十分に意味はあります。
+
+プロジェクトの`Src`フォルダに`AudioSettings.h`(オーディオ・セッティングス)という名前のヘッダファイルを追加してください。追加した`AudioSettings.h`を開き、次のプログラムを追加してください。
+
+```diff
++/**
++* @file AudioSettings.h
++*/
++#ifndef AUDIOSETTINGS_H_INCLUDED
++#define AUDIOSETTINGS_H_INCLUDED
++
++/**
++* 音声再生プレイヤー番号
++*/
++namespace AudioPlayer {
++inline constexpr int bgm = 0; // BGMの再生に使うプレイヤー番号
++} // namespace Player
++
++/**
++* BGM設定
++*/
++namespace BGM {
++inline constexpr char title[] = "Res/Audio/????"; // タイトル画面のBGM
++inline constexpr char mainGame[] = "Res/Audio/????"; // 迷路のBGM
++} // namespace Bgm
++
++/**
++* 効果音設定
++*/
++namespace SE {
++inline constexpr char buttonClick[] = "Res/Audio/????"; // ボタンクリック音
++inline constexpr char doorOpen[] = "Res/Audio/????";  // ドアが開く音
++inline constexpr char leverMove[] = "Res/Audio/????"; // レバーの動作音
++inline constexpr char goalEvent[] = "Res/Audio/????"; // ゴールに到達した
++inline constexpr char gameOverEvent[] = "Res/Audio/????"; // 敵につかまった
++} // namespace SE
++
++#endif // AUDIOSETTINGS_H_INCLUDED
+```
+
+ヘッダファイルに変数や定数を定義すると、インクルード先のCPPファイルごとにコピーが作られます。
+
+インクルードしているCPPファイルがたくさんあると大量のコピーが作られるため、実行ファイルのサイズが肥大化する可能性があります(実際には、最適化によって解消されることが多いです)。
+
+実行ファイルが肥大化するとプログラムの性能に影響します。これを解決するには`inline`(インライン)キーワードを使います。
+
+>`inline`はもともとは関数にのみ指定できたのですが、C++17において変数にも指定できるように改良されました。
+
+`inline`の作用のひとつに「定義をひとつに保つ」というものがあります。この作用により、変数を`inline`指定するとコピーが作られなくなります。
+
+これが、`inline constexpr`という宣言の意味です。「C++14以前を使っている」、「チームのコーディングルールで決まっている」などの理由がない限り、定数は`inline constexpr`で定義するとよいでしょう。
+
+>**【constexpr関数とconstexprメンバ変数は勝手にinlineになる】**<br>
+>関数またはメンバ変数に`constexpr`を指定すると、自動的に`inline`扱いになります。つまり、`inline`が必要なのはグローバルな「定数」を定義するときだけです。
+
+<pre class="tnmai_assignment">
+<strong>【課題15】</strong>
+<code>AudioSettings.h</code>にある<code>????</code>の部分を、ダウンロードまたは作成した音声ファイル名に置き換えなさい。
+</pre>
+
+### 3.5 BGMを再生する
+
+それでは音声を再生しましょう。`TitleScene.cpp`を開き、音声用ヘッダファイルをインクルードしてください。
+
+```diff
+ #include "Engine/UILayout.h"
+ #include "Engine/UIButton.h"
+ #include "Engine/Engine.h"
++#include "Engine/EasyAudio/EasyAudio.h"
++#include "AudioSettings.h"
+ 
+ /**
+ * タイトル画面を初期化する
+```
+
+次に、`Initialize`メンバ関数の定義にあるUI設定コードの下に、次のプログラムを追加してください。
+
+```diff
+   fadeObject->scale = {fbSize.x / fbSize.y, 1, 1};
+   // カラーを「黒、透明」に設定
+   std::fill_n(fadeObject->color, 4, 0.0f);
++
++  // BGMを再生
++  EasyAudio::Play(AudioPlayer::bgm, BGM::title, 1, true);
+
+   return true; // 初期化成功
+ }
+```
+
+`Play`(プレイ)関数は、BGMのようにループ再生をしたり、途中で停止させる必要のある音声を再生する場合に使います。
+
+<pre class="tnmai_code"><strong>【書式】</strong>
+void Play(再生に使うプレイヤー番号, 音声ファイル名, 音量, ループフラグ);
+</pre>
+
+プログラムが書けたらビルドして実行してください。タイトル画面でBGMが再生されていたら成功です。
+
+### 3.6 効果音(SE)を再生する
+
+次は効果音を再生しましょう。`startButton`のデリゲートを設定するプログラムに、次のプログラムを追加してください。
+
+```diff
+     [this](UIButton* button) {
+       fadeTimer = 1;
+       button->interactable = false; // ボタンを無効化
++      EasyAudio::PlayOneShot(SE::buttonClick);
+     });
+
+   // フェードアウト用UIオブジェクト
+```
+
+効果音のようにループや途中停止などが必要ない音声の場合、`PlayOneShot`(プレイ・ワン・ショット)関数を使います。
+
+<pre class="tnmai_code"><strong>【書式】</strong>
+void PlayOneShot(音声ファイル名, 音量);
+</pre>
+
+プログラムが書けたらビルドして実行してください。スタートボタンをクリックしたときに効果音が再生されたら成功です。
+
+### 1.7 BGMを停止する
+
+現在は、ゲームが開始されてもタイトル画面のBGMが鳴り続けています。タイトル画面が終了するときにBGMを止めましょう。`Finalize`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+ void TitleScene::Finalize(Engine& engine)
+ {
+   engine.ClearGameObjectAll();
++  EasyAudio::Stop(AudioPlayer::bgm);
+ }
+```
+
+プログラムが書けたらビルドして実行してください。スタートボタンをクリックしてゲームを開始したとき、BGMが停止していたら成功です。
+
+<pre class="tnmai_assignment">
+<strong>【課題16】</strong>
+メインゲーム画面の<code>Initialize</code>メンバ関数に、メインゲーム画面用のBGMを再生するプログラムを追加しなさい。
+</pre>
+
+<pre class="tnmai_assignment">
+<strong>【課題17】</strong>
+ドアが開くときに<code>SE::doorOpen</code>を再生するプログラムを追加しなさい。
+</pre>
+
+<pre class="tnmai_assignment">
+<strong>【課題18】</strong>
+<code>SimpleLever</code>コンポーネントに、レバーがクリックされたときに<code>SE::leverMove</code>を再生するプログラムを追加しなさい。
+</pre>
+
+<pre class="tnmai_assignment">
+<strong>【課題19】</strong>
+ゲームクリアおよびゲームオーバーになったとき、BGMを停止し、<code>SE::goalEvent</code>、<code>SE::gameOverEvent</code>を再生するプログラムを追加しなさい
+</pre>
+
+<pre class="tnmai_assignment">
+<strong>【課題20】</strong>
+ゲームクリアおよびゲームオーバーにおいて、「戻るボタン」をクリックしたときに<code>SE::buttonClick</code>を再生するプログラムを追加しなさい。
+</pre>
+
+>**【3章のまとめ】**
+>
+>* 音声を選ぶときは「ゲームの雰囲気に合うこと」、「他の就職活動をしている人が使っていそうな音声は避けること」、の2点に気をつける。
+>* 効果音ジェネレーターを使うと、簡単な効果音なら自分で作ることができる。
