--- a/OpenGL3D_2023_10.md
+++ b/OpenGL3D_2023_10.md
@@ -539,7 +539,7 @@
 
 ある軸に垂直な2つの平面があるとき、その2平面の間の領域のことを「`Slab`(スラブ, 「厚板(あついた)」という意味)」といいます。AABBは「X, Y, Zの3軸のスラブが交差したもの」と考えることができます。
 
-AABBと光線が交差している場合、3つのスラブと光線の公差範囲には重なっている部分が存在します。そのため、AABBと光線の交差は3つのスラブとの交差判定を行い、共通の交差範囲を求めることで判定できます。
+AABBと光線が交差している場合、3つのスラブと光線の交差範囲には重なっている部分が存在します。そのため、AABBと光線の交差は3つのスラブとの交差判定を行い、共通の交差範囲を求めることで判定できます。
 
 <p align="center">
 <img src="images/10_slab_ray_intersection.png" width="45%" />
@@ -601,13 +601,13 @@ AABBと光線が交差している場合、3つのスラブと光線の公差範
 +    std::swap(t0, t1);
 +  }
 +
-+  // 共通の公差範囲を求める
++  // 共通の交差範囲を求める
 +  // 以前の開始時刻と今回の開始時刻を比較し、遅いほうを選択
 +  if (t0 > tmin) {
 +    tmin = t0;
 +  }
 +
-+  // 共通の公差範囲を求める
++  // 共通の交差範囲を求める
 +  // 以前の終了時刻と今回の終了時刻を比較し、早いほうを選択
 +  if (t1 < tmax) {
 +    tmax = t1;
@@ -977,7 +977,7 @@ NDC座標系は-1～+1の範囲の座標系で、Windowsのスクリーン座標
 +    } // for colliders
 +  } // for gameObjects
 +
-+  // 交差するコライダーがあれればtrue、なければfalseを返す
++  // 交差するコライダーがあればtrue、なければfalseを返す
 +  if (hitInfo.collider) {
 +    // 交点の座標を計算
 +    hitInfo.point = ray.start + ray.direction * hitInfo.distance;
