課題05の条件を緩める

--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -1658,12 +1658,12 @@ UIは`RenderQueue_overlay`に設定されるので、とりあえず`overlay`以
 
 <pre class="tnmai_assignment">
 <strong>【課題05】</strong>
-マップを広くする、複数の階層を作るなどの方法で、迷路の探索範囲を10倍以上にしなさい。
-元のマップは11x11=121マスなので、例えば「35x35=1225マスにする」、「20x20=400マスを3階層作る」などが考えられます。
+マップを広くする、複数の階層を作るなどの方法で、迷路の探索範囲を5倍以上にしなさい。
+元のマップは11x11=121マスなので、例えば「25x25=625マスにする」、「15x15=225マスを3階層作る」などが考えられます。
 階層を作る場合、階段などのマップ切り替えオブジェクトを配置し、マップデータを読み込みなおすなどの処理が必要でしょう。
 
 マップのデザインは「洋館 図面」のように、建物を表す単語と図表を表す単語を組み合わせて検索すると、さまざまな図面が見つかります。
-気に入った間取りを再現したり組み合わせるとよいでしょう。洋館や研究所などは、英語で検索するとバリエーションが多くなるのでおすすめです。
+気に入った間取りを再現したり、いくつかの間取りを組み合わせて作るるとよいでしょう。洋館や研究所などは、英語で検索するとバリエーションが多くなるのでおすすめです。
 
   建物を表す単語: 洋館(mansion)、日本家屋(traditional japanese house)、研究所(laboratory)、刑務所(prison)
   図表を表す単語: 間取り図(floor plan)、図面(blueprint)、平面図(plan view)、
