ギミックを配置する課題を追加

--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -1702,3 +1702,16 @@ UIは`RenderQueue_overlay`に設定されるので、とりあえず`overlay`以
 7. 船(帆船、豪華客船、宇宙船)
 8. 基地、要塞
 </pre>
+
+<pre class="tnmai_assignment">
+<strong>【課題07】</strong>
+マップに5個以上のギミックを追加しなさい。例えば以下のようなギミックが考えられます。
+
+- 鍵などのアイテムがないと開かないドア
+- 複数のレバーやボタンを正しく組み合わせないと開かないドア
+- 壁などに偽装された隠し扉
+- アイテムや仕掛けのヒント
+- 間違った操作をすると、敵や罠が起動する仕掛け
+- 一時的に敵の動きを止める仕掛けやアイテム
+- 一方通行のドア
+</pre>
