スポットライト実装前に、スポットライト用のロケーション番号名を定義していたので、ポイントライト用になるように修正

--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -144,11 +144,11 @@
 +// シェーダのライト配列のロケーション番号
 +constexpr GLint locColor = 100;
 +constexpr GLint locLightCount = 110;
-+constexpr GLint locLightColorAndFalloffAngle = 111;
++constexpr GLint locLightColor = 111;
 +constexpr GLint locLightPositionAndRadius =
-+  locLightColorAndFalloffAngle + maxShaderLightCount;
++  locLightColor + maxShaderLightCount;
 +constexpr GLint locLightDirectionAndConeAngle =
-+  locLightColorAndFalloffAngle + maxShaderLightCount * 2;
++  locLightColor + maxShaderLightCount * 2;
 
  // 点光源
  struct PointLight
