--- a/OpenGL3D_2023_06.md
+++ b/OpenGL3D_2023_06.md
@@ -114,7 +114,7 @@ bool is_base_of_v<ベースクラス, 判定するクラス>;
    std::shared_ptr<T> AddComponent() {
      auto p = std::make_shared<T>();
      p->owner = this;
-+    if constexpr (std::is_base_of_v<T, AabbCollider>) {
++    if constexpr (std::is_base_of_v<AabbCollider, T>) {
 +      colliders.push_back(p);
 +    }
      components.push_back(p);
