--- a/OpenGL3D_2023_11.md
+++ b/OpenGL3D_2023_11.md
@@ -804,7 +804,7 @@ void glColorhMask(
 
 カラーバッファは「赤、緑、青、アルファ」の4要素で構成されるため、`glColorMask`関数は「要素ごとに書き込みの許可と禁止を選択できる」ようになっています。
 
-プログラムが書けたらビルドして実行してください。部屋の右側から左を見てみ、左側から右を見ても、奥側のグレアが正しく描画されていたら成功です。
+プログラムが書けたらビルドして実行してください。部屋の右側から左を見ても、左側から右を見ても、奥側のグレアが正しく描画されていたら成功です。
 
 <p align="center">
 <img src="images/11_result_6_color_buffer.jpg" width="45%"/>&emsp;<img src="images/11_result_6_depth_buffer.png" width="45%"/><br>
@@ -1047,13 +1047,13 @@ T uniform_real_distribution::operator()(乱数生成オブジェクト);
 +  }
 +
 +  vec2 range = { 1, 1 }; // XZ方向の発生半径
-+  float interval = 1;    // 霧を発成する間隔
++  float interval = 1;    // 霧を発生する間隔
 +
 +private:
 +  // 霧テクスチャ
 +  TexturePtr texMist =
 +    std::make_shared<Texture>("Res/mist.tga");
-+  float timer = 0; // 霧発成タイマー
++  float timer = 0; // 霧発生タイマー
 +};
 
  #endif // MIST_H_INCLUDED
