InitializeLight関数呼び出しを追加, usedLightsの番号重複に対処するコードを追加

--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -242,7 +242,23 @@
    * マウス座標から発射される光線を取得する
 ```
 
-それでは、ひとつずつ定義を作成しましょう。`Engine.cpp`を開き、`GetAspectRatio`メンバ関数の定義の下に、次のプログラムを追加してください。
+それでは、ひとつずつ定義を作成しましょう。まず初期化関数の呼び出しを追加します。`Engine.cpp`を開き、`Initialize`メンバ関数に次のプログラムを追加してください。
+
+```diff
+    return 1; // アドレス取得失敗
+  }
+
+  // メッセージコールバックの設定
+  glDebugMessageCallback(DebugCallback, nullptr);
++
++  // ライトを初期化
++  InitializeLight();
+
+  // シェーダを読み込んでコンパイル
+  vs = CompileShader(GL_VERTEX_SHADER, "Res/standard.vert");
+```
+
+次に初期化関数を定義します。`GetAspectRatio`メンバ関数の定義の下に、次のプログラムを追加してください。
 
 ```diff
    const vec2 size = GetFramebufferSize();
@@ -439,6 +455,10 @@
 +  const auto itrUnused = std::remove_if(usedLights.begin(), usedLights.end(),
 +    [&](int i) { return ! lights[i].used; });
 +  usedLights.erase(itrUnused, usedLights.end());
++
++  // 重複する番号を除去する
++  std::sort(usedLights.begin(), usedLights.end());
++  std::unique(usedLights.begin(), usedLights.end());
 
    // カメラの正面ベクトルを計算
 
@@ -448,7 +468,7 @@
 次に、カメラの正面を指すベクトルを求めます。このベクトルは、ライトがカメラの前後どちらにあるのかを判定するために使われます。
 
 ```diff
-   usedLights.erase(itrUnused, usedLights.end());
+   std::unique(usedLights.begin(), usedLights.end());
 
    // カメラの正面ベクトルを計算
 +  const vec3 front = { -sin(camera.rotation.y), 0, -cos(camera.rotation.y) };
