--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -537,7 +537,7 @@
    // ライトデータをGPUメモリにコピー
 ```
 
-ベクトルAとBの内積は、BをAに(またはAをBに)射影した長さとなります。ライトがカメラの後ろにある場合、`dot(flont, v)`の結果は負になります。
+ベクトルAとBの内積は、BをAに(またはAをBに)射影した長さとなります。ライトがカメラの後ろにある場合、`dot(front, v)`の結果は負になります。
 
 また、この内積の結果はライトからの垂直距離になります。この距離がライトの半径よりも遠い場合、そのライトは完全にカメラの後ろにあるため、画面には一切影響を与えません。
 
