castShadowsは未実装なので削除

--- a/OpenGL3D_2023_17.md
+++ b/OpenGL3D_2023_17.md
@@ -1395,7 +1395,7 @@ void glBindFramebuffer(割り当て先, 割り当てるFBO);
 +  // メッシュを描画
 +  for (GameObjectList::iterator i = begin; i != end; ++i) {
 +    const auto& e = *i;
-+    if (!e->staticMesh || !e->castShadows) {
++    if (!e->staticMesh) {
 +      continue;
 +    }
 +
