prog3Dの参照外しを除去(テキストではまだクラス化していないため)

--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -1569,7 +1569,7 @@ Unityエディタで蛍光灯を選択し、<code>Lamp.obj</code>という名前
 +  glAttachShader(progUnlit, fsUnlit);
 +  glLinkProgram(progUnlit);
 
-   InitLight();
+   InitializeLight();
 ```
 
 ### 4.2 アンリットシェーダにカメラパラメータを設定する
