関数名を以前のテキストに合わせる

--- a/OpenGL3D_2023_13.md
+++ b/OpenGL3D_2023_13.md
@@ -1366,7 +1366,7 @@ UIオブジェクトと同じく、ビルボードも固有マテリアルを作
 +  return tex; // 作成したテクスチャを返す
 +}
 
- void Engine::InitLight()
+ void Engine::InitializeLight()
  {
 ```
 
