不要になったglUseProgram, glViewport呼び出しを削除する説明文を追加

--- a/OpenGL3D_2023_17.md
+++ b/OpenGL3D_2023_17.md
@@ -1434,7 +1434,28 @@ void glBindFramebuffer(割り当て先, 割り当てるFBO);
 
 半透明オブジェクトは影を落とさないと仮定して、`fboShadow`に描画するのは`RenderQueue_transparent`以前のオブジェクトだけにしています。
 
-`CreateShadowMap`は内部でビューポートを変更するので、描画後にビューポートを再設定するのを忘れないでください。
+`CreateShadowMap`は内部でビューポートとシェーダを変更するので、描画後に再設定するのを忘れないでください。
+
+それから、シャドウマップ作成前のシェーダとビューポートの設定は無意味になったので削除しておきます。`Render`メンバ関数の先頭にある`glUseProgram`と`glViewport`関数の呼び出しを削除してください。
+
+```diff
+   // バックバッファをクリア
+   glClearColor(0.3f, 0.6f, 0.9f, 1.0f);
+   glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+-
+-  // 描画に使うシェーダを指定
+-  glUseProgram(*prog3D);
+
+   // フレームバッファの大きさを取得
+   int fbWidth, fbHeight;
+   glfwGetFramebufferSize(window, &fbWidth, &fbHeight);
+-
+-  // ビューポートを設定
+-  glViewport(0, 0, fbWidth, fbHeight);
+
+   const GLuint programs[] = { prog3D, progUnlit };
+   for (auto prog : programs) {
+```
 
 これで、`fboShadow`に深度が描画されるはずです。影を描画するにはもう少しかかりますが、「シャドウマップが正しく描画されているかどうか」は確認しておく必要があります。
 
