ガイドコードを以前のテキストに合わせる

--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -1712,20 +1712,13 @@ void assign(コピー元配列の先頭, コピー元配列の終端);
 最後に、`Draw`関数の呼び出しを修正します。`Engine.cpp`を開き、`DrawGameObject`メンバ関数にあるメッシュを描画するプログラムを、次のように変更してください。
 
 ```diff
-       glBindTextures(0, 1, &tex);
-     }
-
      // 図形を描画
--    Draw(*e->staticMesh);
-+    if (e->staticMesh) {
+     if (e->staticMesh) {
+-      Draw(*e->staticMesh);
 +      Draw(*e->staticMesh, prog3D);
-+    } else {
-+      const DrawParams& params = meshBuffer->GetDrawParams(e->meshId);
-+      glDrawElementsInstancedBaseVertex(params.mode, params.count,
-+        GL_UNSIGNED_SHORT, params.indices, 1, params.baseVertex);
-+    }
-   }
-   glBindVertexArray(0);
+     } else {
+       const DrawParams& params = meshBuffer->GetDrawParams(e->meshId);
+       glDrawElementsInstancedBaseVertex(params.mode, params.count,
 ```
 
 <div style="page-break-after: always"></div>
