親の座標変換を衝突判定とレイキャストに反映させる節を追記

--- a/OpenGL3D_2023_14.md
+++ b/OpenGL3D_2023_14.md
@@ -292,7 +292,54 @@
 
 親がいない場合は「何も変換されない値」をGPUメモリにコピーするようにしました。これは、「拡大率=100%、回転=0度、平行移動=なし」という値です。
 
-### 1.4 壁をドアの親にする
+### 1.4 親の座標変換パラメータを衝突判定に反映する
+
+続いて、衝突判定を親に対応させます。`Engine.cpp`を開き、`Raycast`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+   for (const auto& go : gameObjects) {
+     for (const auto& collider : go->colliders) {
+       // AABBをワールド座標系に変換
+       AABB worldAabb = {
+         collider->aabb.min * go->scale + go->position,
+         collider->aabb.max * go->scale + go->position };
++
++      // 親の座標変換パラメータを反映
++      if (go->parent) {
++        worldAabb = {
++          worldAabb.min * go->parent->scale + go->parent->position,
++          worldAabb.max * go->parent->scale + go->parent->position };
++      }
+
+       // 光線との交差判定
+       float d;
+```
+
+次に`HandleGameObjectCollision`メンバ関数の定義にある「ワールド座標系の衝突判定を作成」するプログラムに、次のプログラムを追加してください。
+
+```diff
+       // コライダーの座標をワールド座標に変換
+       list[i].worldAabb.min *= e->scale;
+       list[i].worldAabb.max *= e->scale;
+       list[i].worldAabb.min += e->position;
+       list[i].worldAabb.max += e->position;
++
++      // 親の座標変換パラメータを反映
++      vec3 s = e->scale;
++      vec3 v = e->position;
++      if (e->parent) {
++        list[i].worldAabb = {
++          list[i].worldAabb.min * e->parent->scale + e->parent->position,
++          list[i].worldAabb.max * e->parent->scale + e->parent->position };
++      } // if e->parent
+    }
+    colliders.push_back(list);
+  }
+```
+
+AABBは回転を反映することが難しいので、拡大率と平行移動だけを反映させています。
+
+### 1.5 壁をドアの親にする
 
 それでは、壁をドアの親に設定しましょう。`MainGameScene.cpp`を開き、`Initialize`メンバ関数にある「ドアを設定」するプログラムを、次のように変更してください。
 
@@ -327,8 +374,9 @@
 ```diff
       // 光線がドアに衝突したらドアを開ける
       if (owner->name == "door") {
-        if (owner->position.y > -2) {
+-       if (owner->position.y > -2) {
 -         owner->position.y = -2; // ドアを床下に移動
++       if (owner->rotation.y == 0) {
 +         owner->rotation.y = radians(90); // ドアを回転
 +         if (auto collider = owner->GetComponent<AabbCollider>()) {
 +           collider->isTrigger = true; // 衝突判定を消す
@@ -345,7 +393,7 @@
 [思ってたのと違うかも]
 </p>
 
-### 1.5 ドアモデルのエクスポートをやりなおす
+### 1.6 ドアモデルのエクスポートをやりなおす
 
 ドアの開きかたは、思っていたものとは違ったかもしれません。ドアの中心が回転してしまうのは、そこがドアの原点になっているからです。
 
@@ -414,7 +462,7 @@ Unityエディタを起動し、ドアモデルを選択してください。`Ho
 <img src="images/14_result_1.jpg" width="45%" /><br>
 </p>
 
-### 1.6 ドアをアニメーションさせる
+### 1.7 ドアをアニメーションさせる
 
 ドアがいきなり90度開くというのは、昔のゲームやインディゲームなら許されるでしょうが、2023年現在に提供するユーザー体験としては品質が低いと言わざるを得ません。そこで、ドアの開閉をアニメーションで表現する、ドア用のコンポーネントを作成しましょう。
 
@@ -1048,7 +1096,7 @@ Unityエディタを起動し、ドアモデルを選択してください。`Ho
 
 定義した関数を使って4番の「ゲームオブジェクト自身の座標変換ベクトル配列と、全ての親の座標変換ベクトル配列を乗算する」プログラムを作成します。
 
-`Engine.cpp`を開き、`DrawGameObject`目k場関数の定義を次のように変更してください。
+`Engine.cpp`を開き、`DrawGameObject`メンバ関数の定義を次のように変更してください。
 
 ```diff
      // ユニフォーム変数にデータをコピー
