unique後にeraseしていなかったのでeraseする

--- a/OpenGL3D_2023_12.md
+++ b/OpenGL3D_2023_12.md
@@ -458,7 +458,8 @@
 +
 +  // 重複する番号を除去する
 +  std::sort(usedLights.begin(), usedLights.end());
-+  std::unique(usedLights.begin(), usedLights.end());
++  const auto itrUnique = std::unique(usedLights.begin(), usedLights.end());
++  usedLights.erase(itrUnique, usedLights.end());
 
    // カメラの正面ベクトルを計算
 
