習得目標と各章のまとめを書いたり、OBBの図を追加したりする

--- a/OpenGL3D_2023_16.md
+++ b/OpenGL3D_2023_16.md
@@ -1,13 +1,14 @@
 [OpenGL 3D 2023 後期 第04回]
 
-# 有向境界ボックスとレベルデザイン
+# <ruby>有向境界<rt>ゆうこう きょうかい</rt></ruby>ボックスとレベルデザイン
 
 ## 習得目標
 
-* OBBを実装し、衝突判定の自由度を上げる。
-* 実用に耐えるレベルをデザインする。
-* 
-* 
+* 有向境界ボックス(OBB)を表すクラスを定義できる。
+* OBBと球体の交差判定の方法を説明できる。
+* OBBと光線の交差判定の方法を説明できる。
+* 他のソフトウェア等で作成されたデータを読み込むとき、座標変換が必要になる理由を説明できる。
+* フラグメントの描画をキャンセルするシェーダを書くことができる。
 
 ## 1. 球体とOBBの交差判定
 
@@ -25,6 +26,10 @@ OBBは次の3つのパラメータによって定義されます。
 >* 3つの軸の向きベクトル
 >* 3つの軸方向の拡大率
 
+<p align="center">
+<img src="images/16_obb.png" width="25%" />
+</p>
+
 これを実際に定義してみましょう。`Collision.h`を開き、`Sphere`構造体の定義の下に、次のプログラムを追加してください。
 
 ```diff
@@ -41,7 +46,7 @@ OBBは次の3つのパラメータによって定義されます。
 +{
 +  vec3 position; // 中心座標
 +  vec3 axis[3];  // 軸の向きベクトル
-+  vec3 scale;    // 拡大率
++  vec3 scale;    // 軸方向の大きさ
 +};
 
  /**
@@ -651,9 +656,10 @@ AABBの`Intersect`関数を作成したときと今回の`Intersect`関数の大
 
 >**【1章のまとめ】**
 >
->* 
->* 
->* 
+>* 有向境界ボックス(OBB)は「中心座標、3つの軸ベクトル、3つの軸方向の大きさ」によって定義される。
+>* 球体とOBBの交差判定は、球体とAABBの交差判定と同様に、OBB上の球体への最近接点を求めることで計算できる。
+>* OBB上の最近接点を求めるには、球体の中心座標をOBBの3つの軸に射影する。
+>* 有向スラブと光線の交差判定を求めるには、光線の向きと始点をスラブの軸ベクトルに射影する。
 
 <div style="page-break-after: always"></div>
 
