--- a/OpenGL3D_2023_14.md
+++ b/OpenGL3D_2023_14.md
@@ -816,10 +816,10 @@ n3 = {0,                 0,                0,                        1          
 そして、このベクトルを使ってx''',y''',z''',w'''を座標変換し、x2,y2,z2,w2を得る式は次のようになります。
 
 ```text
-x2 = x''' * n0.x + y``` * n0.y + z``` * n0.z + w``` * n0.w
-y2 = x''' * n1.x + y``` * n1.y + z``` * n1.z + w``` * n1.w
-z2 = x''' * n2.x + y``` * n2.y + z``` * n2.z + w``` * n2.w
-w2 = x''' * n3.x + y``` * n3.y + z``` * n3.z + w``` * n3.w
+x2 = x''' * n0.x + y''' * n0.y + z''' * n0.z + w''' * n0.w
+y2 = x''' * n1.x + y''' * n1.y + z''' * n1.z + w''' * n1.w
+z2 = x''' * n2.x + y''' * n2.y + z''' * n2.z + w''' * n2.w
+w2 = x''' * n3.x + y''' * n3.y + z''' * n3.z + w''' * n3.w
 ```
 
 同じ計算をしているので当然ではあるのですが、x''',y''',z''',w'''と同じ式になっていることが分かると思います。
@@ -851,7 +851,7 @@ mn0 = { m0.x * n0.x + m1.x * n0.y + m2.x * n0.z + m3.x * n0.w,
         m0.w * n0.x + m1.w * n0.y + m2.w * n0.z + m3.w * n0.w }
     = m0 * n0.x + m1 * n0.y + m2 * n0.z + m3 * n0.w
 
-x2' = v.x * mn0.x + v.y * mn0.y + v.z * mn0.z * v.w * mn0.w
+x2' = v.x * mn0.x + v.y * mn0.y + v.z * mn0.z + v.w * mn0.w
 ```
 
 同様にして、mn1, mn2, mn3のベクトルを定義することでき、そのベクトルを使ってy2',z2',w2'を計算できます。
@@ -861,9 +861,9 @@ mn1 = m0 * n1.x + m1 * n1.y + m2 * n1.z + m3 * n1.w
 mn2 = m0 * n2.x + m1 * n2.y + m2 * n2.z + m3 * n2.w
 mn3 = m0 * n3.x + m1 * n3.y + m2 * n3.z + m3 * n3.w
 
-y2' = v.x * mn1.x + v.y * mn1.y + v.z * mn1.z * v.w * mn1.w
-z2' = v.x * mn2.x + v.y * mn2.y + v.z * mn2.z * v.w * mn2.w
-w2' = v.x * mn3.x + v.y * mn3.y + v.z * mn3.z * v.w * mn3.w
+y2' = v.x * mn1.x + v.y * mn1.y + v.z * mn1.z + v.w * mn1.w
+z2' = v.x * mn2.x + v.y * mn2.y + v.z * mn2.z + v.w * mn2.w
+w2' = v.x * mn3.x + v.y * mn3.y + v.z * mn3.z + v.w * mn3.w
 ```
 
 これはつまり、mn0～mn3をCPU側で計算してユニフォーム変数にコピーしておけば、あとは簡単な計算で親子階層を考慮した座標変換ができる、ということです。
@@ -888,7 +888,7 @@ mno0 = { mn0.x * o0.x + mn1.x * o0.y + mn2.x * o0.z + mn3.x * o0.w,
          mn0.w * o0.x + mn1.w * o0.y + mn2.w * o0.z + mn3.w * o0.w }
      = mn0 * o0.x + mn1 * o0.y + mn2 * o0.z + mn3 * o0.w
 
-x3' = v.x * mno0.x + v.y * mno0.y + v.z * mno0.z * v.w * mno0.w
+x3' = v.x * mno0.x + v.y * mno0.y + v.z * mno0.z + v.w * mno0.w
 ```
 
 `m * n`だった部分が`mn * o`に変わった以外は全く同じ式になっていることが分かると思います。つまり、「`m * n`の計算結果に`o`を掛けた値」になっているわけです。
