skeletalシェーダにライトパラメータを設定するコードを追記

--- a/OpenGL3D_2023_18.md
+++ b/OpenGL3D_2023_18.md
@@ -570,9 +570,85 @@ mat4 transpose(変換する4x4行列);
      // アスペクト比と視野角を設定
 ```
 
+また、`skeletal`シェーダのフラグメントシェーダは`standard`シェーダと同じです。そのため、`skeletal`シェーダにもライトパラメータを設定しないとライティングが行われません。
+
+`skeletal`シェーダにライトパラメータを設定しましょう。`UpdateShaderLight`メンバ関数の定義にある、環境光と平行光源をGPUメモリにコピーするプログラムを次のように変更してください。
+
+```diff
+ void Engine::UpdateShaderLight()
+ {
++  const GLuint programs[] = { prog3D, progSkeletal };
++  for (auto prog : programs) {
+     // 環境光をGPUメモリにコピー
+-    glProgramUniform3fv(prog3D, locAmbientLight, 1, &ambientLight.x);
++    glProgramUniform3fv(prog, locAmbientLight, 1, &ambientLight.x);
+
+     // 平行光源のパラメータをGPUメモリにコピー
+     const vec3 color = directionalLight.color * directionalLight.intensity;
+-    glProgramUniform3fv(prog3D, locDirectionalLightColor, 1, &color.x);
+-    glProgramUniform3fv(prog3D, locDirectionalLightDirection,
++    glProgramUniform3fv(prog, locDirectionalLightColor, 1, &color.x);
++    glProgramUniform3fv(prog, locDirectionalLightDirection,
+       1, &directionalLight.direction.x);
++  } // for programs
+
+   // コピーするライトがなければライト数を0に設定
+   if (usedLights.empty()) {
++    for (auto prog : programs) {
+-      glProgramUniform1i(prog3D, locLightCount, 0);
++      glProgramUniform1i(prog, locLightCount, 0);
++    }
+     return;
+   }
+```
+
+次に、画面に影響するライトがない場合にライト数を0に設定するプログラムを、次のように変更してください。
+
+```diff
+   // 画面に影響するライトがなければライト数を0に設定
+   if (distanceList.empty()) {
++    for (auto prog : programs) {
+-      glProgramUniform1i(prog3D, locLightCount, 0);
++      glProgramUniform1i(prog, locLightCount, 0);
++    }
+     return;
+   }
+```
+
+次に、画面に影響するライトのパラメータを設定するプログラムを、次のように変更してください。
+
+```diff
+     directionAndConeAngle[i] = {
+       p->direction.x, p->direction.y, p->direction.z, p->coneAngle };
+   }
++  for (auto prog : programs) {
+-    glProgramUniform4fv(prog3D, locLightColorAndFalloffAngle,
++    glProgramUniform4fv(prog, locLightColorAndFalloffAngle,
+       lightCount, &colorAndFalloffAngle[0].x);
+-    glProgramUniform4fv(prog3D, locLightPositionAndRadius,
++    glProgramUniform4fv(prog, locLightPositionAndRadius,
+       lightCount, &positionAndRadius[0].x);
+-    glProgramUniform4fv(prog3D, locLightDirectionAndConeAngle,
++    glProgramUniform4fv(prog, locLightDirectionAndConeAngle,
+       lightCount, &directionAndConeAngle[0].x);
+-    glProgramUniform1i(prog3D, locLightCount, lightCount);
++    glProgramUniform1i(prog, locLightCount, lightCount);
++  } // for program
+ }
+
+ /**
+ * スカイスフィアを描画する
+```
+
 これで、`skeletal`シェーダを使う準備ができました。
 
 ### 1.6 LoadOBJ関数からOBJファイル読み込み処理を分離する
+
+スタティックメッシュを作成すると`meshes`配列に追加されます。しかし、スケルタルメッシュはスタティックメッシュとは異なる型なので、`meshes`配列に追加することができません。
+
+そこで、スケルタルメッシュを追加するための`skeletalMeshes`(スケルタル・メッシズ)配列を追加します。
+
+`Mesh.h`を開き、`MeshBuffer`クラスの定義に次のプログラムを追加してください。
 
 ```diff
  private:
