オークシャーマンを追加する際、男性モデルのアニメーションを変更しない

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -1345,7 +1345,9 @@
 
 プログラムが書けたらビルドして実行してください。どのアニメーションを再生しても、右手を前に上げた状態になっていたら成功です。
 
-### 2.6 スキンメッシュをスタティックメッシュに変換する
+## 3. スキンメッシュをOBJファイルに変換する
+
+### 3.1 スキンメッシュをスタティックメッシュに変換する
 
 アセットストアで販売されているキャラクターモデルは、ほぼ例外なく「スキンメッシュ」となっています。しかし、`Scene OBJ Exporter`は「スタティックメッシュ」にしか対応していません。
 
@@ -1438,7 +1440,7 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 ファイル名は<code>OrcShaman.obj</code>としなさい。
 </pre>
 
-### 2.7 オークシャーマンを表示する
+### 3.2 オークシャーマンを表示する
 
 とりあえず、男性モデル用のスケルトンをコピーして、オークシャーマンをアニメーションさせてみましょう。`Engine.cpp`を開き、`human_male.obj`を読み込むプログラムの下に、次のプログラムを追加してください。
 
@@ -1464,25 +1466,35 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
    meshBuffer->LoadOBJ("Res/MeshData/skull/skull_highpoly_with_normal.obj");
 ```
 
-次に`Exploration.cpp`を開き、`Initialize`メンバ関数の定義を次のように変更してください。
+次に`Exploration.cpp`を開き、`Initialize`メンバ関数の定義にある「テスト用のスケルタルメッシュを配置」するプログラムの下に、次のプログラムを追加してください。
 
 ```diff
-     auto skeletal = engine.Create<GameObject>("joint test", pos);
-     skeletal->renderer = std::make_shared<SkeletalMeshRenderer>();
-     skeletal->renderer->SetMesh(
--      engine.GetSkeletalMesh("Res/MeshData/human_male.obj"));
+     weapon->staticMesh = engine.GetStaticMesh(
+       "Res/MeshData/Low Poly Weapons VOL.1/M1911.obj");
+     weapon->SetParentAndJoint(skeletal, 2);
+   }
++
++  { // オークシャーマンを配置
++    auto orcShaman = engine.Create<GameObject>("OrcShaman", { -3, 0.5f, -4 });
++    orcShaman->renderer = std::make_shared<SkeletalMeshRenderer>();
++    orcShaman->renderer->SetMesh(
 +      engine.GetSkeletalMesh("Res/MeshData/OrcShaman/OrcShaman.obj"));
-     skeletal->AddComponent<AnimationChanger>();
-     auto a = skeletal->AddComponent<Animator>();
++    orcShaman->AddComponent<AnimationChanger>();
++    auto a = orcShaman->AddComponent<Animator>();
++    a->AddClip("walk", clipWalk);
++    a->Play("walk");
++  }
+   return true;
+ }
 ```
 
-プログラムが書けたらビルドして実行してください。男性の代わりにオークシャーマンが表示されていたら成功です。
+プログラムが書けたらビルドして実行してください。男性の左隣にオークシャーマンが表示されていたら成功です。
 
 <p align="center">
 <img src="images/20_result_3.jpg" width="45%" />
 </p>
 
-人間の男性用に用意したスケルトンなのであちこちに変なところはありますが、一応アニメーションはできているようです。それでは、オークシャーマンの合わせてスケルトンとアニメーションを調整しましょう。
+一応のアニメーションはできているようですが、人間の男性用に用意したスケルトンなのでところどころおかしな部分があります。フードが肩にめり込んでいたり、足の付根の位置がおかしかったり...。そこで、オークシャーマン用にスケルトンとアニメーションを調整しましょう。
 
 スケルトンを調整するには関節の位置を調べます。Unityエディタを開いてオークシャーマンを表示してください。上部のグリッド表示パネルをクリックして設定ウィンドウを開き、`Grid Plane`を`Z`に、`Opacity`を右端に設定してください。
 
@@ -1536,37 +1548,61 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 <img src="images/20_result_4.jpg" width="45%" />
 </p>
 
-ただ、オークシャーマンで両腕を真下にさげるのはやりすぎなようです。`ExplorationScene.cpp`を開き、`Initialize`メンバ関数の定義にある`kfArmR`配列と`kfArmL`配列の値を次のように変更してください。
+それから、歩行アニメーションは両腕を下げすぎているようです。オークシャーマン用の歩行アニメーションクリップを作成して、アニメーションを改良しましょう。
+
+`ExplorationScene.cpp`を開き、`Initialize`メンバ関数の定義にある「待機アニメーションクリップ」を作成するプログラムの下に、次のプログラムを追加してください。両腕のアニメーションカーブは、男性モデルのものをコピーすると簡単です。
 
 ```diff
-   // 右腕を下ろして前後に回転させるカーブ
-   static const Keyframe kfArmR[] = {
--    {0.0f, vec3( 0.0f, 0, 1.57f)},  // 初期位置
--    {0.5f, vec3( 0.5f, 0, 1.57f)},  // 後ろに振る
--    {1.5f, vec3(-0.5f, 0, 1.57f)},  // 前に降る
--    {2.0f, vec3( 0.0f, 0, 1.57f)} };// 初期位置に戻る
-+    {0.0f, vec3( 0.0f, 0, 1.17f)},  // 初期位置
-+    {0.5f, vec3( 0.5f, 0, 1.17f)},  // 後ろに振る
-+    {1.5f, vec3(-0.5f, 0, 1.17f)},  // 前に降る
-+    {2.0f, vec3( 0.0f, 0, 1.17f)} };// 初期位置に戻る
-   auto curveArmR = std::make_shared<AnimationCurve>();
-   curveArmR->AddKey(std::begin(kfArmR), std::end(kfArmR));
+     curveArmFrontR->AddKey(0.0f, vec3(radians(-90), 0, radians(90)));
+     clipShot->AddCurve(2, AnimationTarget::rotation, curveArmFrontR);
+     clipShot->SetLoopFlag(true); // ループする
+   }
++
++  // オークの歩行
++  auto clipOrcWalk = std::make_shared<AnimationClip>();
++  {
++    // 右腕を下ろして前後に回転させるカーブ
++    static const Keyframe kfArmR[] = {
++      {0.0f, vec3( 0.0f, 0, 1.17f)},  // 初期位置
++      {0.5f, vec3( 0.5f, 0, 1.17f)},  // 後ろに振る
++      {1.5f, vec3(-0.5f, 0, 1.17f)},  // 前に降る
++      {2.0f, vec3( 0.0f, 0, 1.17f)} };// 初期位置に戻る
++    auto curveArmR = std::make_shared<AnimationCurve>();
++    curveArmR->AddKey(std::begin(kfArmR), std::end(kfArmR));
++
++    // 左腕を下ろして前後に回転させるカーブ
++    static const Keyframe kfArmL[] = {
++      {0.0f, vec3( 0.0f, 0, -1.17f)},  // 初期位置
++      {0.5f, vec3(-0.5f, 0, -1.17f)},  // 前に降る
++      {1.5f, vec3( 0.5f, 0, -1.17f)},  // 後ろに振る
++      {2.0f, vec3( 0.0f, 0, -1.17f)} };// 初期位置に戻る
++    auto curveArmL = std::make_shared<AnimationCurve>();
++    curveArmL->AddKey(std::begin(kfArmL), std::end(kfArmL));
++
++    clipOrcWalk->AddCurve(0, AnimationTarget::position, curveBody);
++    clipOrcWalk->AddCurve(2, AnimationTarget::rotation, curveArmR);
++    clipOrcWalk->AddCurve(3, AnimationTarget::rotation, curveArmL);
++    clipOrcWalk->AddCurve(4, AnimationTarget::rotation, curveLegR);
++    clipOrcWalk->AddCurve(5, AnimationTarget::rotation, curveLegL);
++    clipOrcWalk->SetLoopFlag(true);
++  }
 
-   // 左腕を下ろして前後に回転させるカーブ
-   static const Keyframe kfArmL[] = {
--    {0.0f, vec3( 0.0f, 0, -1.57f)},  // 初期位置
--    {0.5f, vec3(-0.5f, 0, -1.57f)},  // 前に降る
--    {1.5f, vec3( 0.5f, 0, -1.57f)},  // 後ろに振る
--    {2.0f, vec3( 0.0f, 0, -1.57f)} };// 初期位置に戻る
-+    {0.0f, vec3( 0.0f, 0, -1.17f)},  // 初期位置
-+    {0.5f, vec3(-0.5f, 0, -1.17f)},  // 前に降る
-+    {1.5f, vec3( 0.5f, 0, -1.17f)},  // 後ろに振る
-+    {2.0f, vec3( 0.0f, 0, -1.17f)} };// 初期位置に戻る
-   auto curveArmL = std::make_shared<AnimationCurve>();
-   curveArmL->AddKey(std::begin(kfArmL), std::end(kfArmL));
+   // テスト用のスケルタルメッシュを設定
+   for (float i = 0; i < 3; ++i) {
 ```
 
-プログラムが書けたらビルドして実行してください。両腕が少し開いて、変更前よりも自然な動きに見えていたら成功です。
+両腕のアニメーションカーブのZ軸回転を`1.37`から`1.17`に変更した以外は、男性モデルの歩行アニメーションと同じです。次に、オークシャーマンを配置するプログラムを次のように変更してください。
+
+```diff
+     orcShaman->AddComponent<AnimationChanger>();
+     auto a = orcShaman->AddComponent<Animator>();
+-    a->AddClip("walk", clipWalk);
++    a->AddClip("walk", clipOrcWalk);
+     a->Play("walk");
+   }
+```
+
+プログラムが書けたらビルドして実行してください。両腕が少し開いたことで、変更前よりも自然な動きに見えていたら成功です。
 
 <p align="center">
 <img src="images/20_result_5.jpg" width="45%" />
