攻撃アニメを作成するためのパラメータを追記

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -1611,11 +1611,38 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 <pre class="tnmai_assignment">
 <strong>【課題04】</strong>
 オークシャーマンが攻撃するアニメーションクリップを作成して表示しなさい。
+アニメーションの長さは1.0秒とします。胴体と右腕のキーフレームには以下の値を使用してください。
+<table style="float: left; text-align: center; margin-right:1%">
+<tr><th>胴体の回転</th></tr>
+<tr><th>時間(秒)</th><th>値</th></tr>
+<tr><td>0.0</td><td>( 0.0, 0.0, 0.0)</td></tr>
+<tr><td>0.4</td><td>(-0.1,-0.3, 0.0)</td></tr>
+<tr><td>0.6</td><td>( 0.2, 0.4, 0.0)</td></tr>
+<tr><td>0.7</td><td>( 0.2, 0.5, 0.0)</td></tr>
+<tr><td>1.0</td><td>( 0.2, 0.5, 0.0)</td></tr>
+</table><table style="float: left; text-align: center; margin-left:1%">
+<tr><th>右腕の回転</th></tr>
+<tr><th>時間(秒)</th><th>値</th></tr>
+<tr><td>0.0</td><td>( 0.0f, 0, 1.17)</td></tr>
+<tr><td>0.4</td><td>(-2.5f, 0, 1.17)</td></tr>
+<tr><td>0.6</td><td>(-1.0f, 0, 1.17)</td></tr>
+<tr><td>0.7</td><td>(-1.2f, 0, 1.27)</td></tr>
+<tr><td>1.0</td><td>(-1.2f, 0, 1.27)</td></tr>
+</table>
+<img src="images/20_orc_attack_front_view.png" width="60%"/>
+<img src="images/20_orc_attack_side_view.png" width="60%"/>
+上記に加えて「左腕を下ろすカーブ」も追加すると良いでしょう。さらに、頭、右足、左足に「胴体と逆に回転するカーブ」を設定すると、より自然に見えます。
 </pre>
 
 <pre class="tnmai_assignment">
 <strong>【課題05】</strong>
-好きな3DモデルをダウンロードしてOBJファイルに変換し、スケルトンと歩行アニメーションを設定して表示しなさい。
+好きな3DモデルをダウンロードしてOBJファイルに変換し、スケルトンと移動(歩く、走るなど)アニメーションを設定して表示しなさい。移動アニメーションさえあれば、攻撃は適当な光線を発射するだけ、ダメージややられたときはビルボードを表示するだけでもゲームは成立します。もう少し現実的なところでは、以下の5個のアニメーションクリップがあれば十分でしょう。
+
+- 待機: 腕を揺らすなどの、ちょっとした動きがあるとよい。
+- 移動: 歩く、走る、空中を飛ぶなど。
+- 攻撃: 武器を振り上げて振り下ろす、銃を構えるなど。
+- ダメージ: 胴体をのけぞらせる(前か後ろに傾ける)程度で十分です。
+- 死亡: 前か後ろに倒れる。
 </pre>
 
 
