shared_ptr化していないシェーダ変数から参照外しをなくす

--- a/OpenGL3D_2023_17.md
+++ b/OpenGL3D_2023_17.md
@@ -1459,7 +1459,7 @@ void glBindFramebuffer(割り当て先, 割り当てるFBO);
    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
 -
 -  // 描画に使うシェーダを指定
--  glUseProgram(*prog3D);
+-  glUseProgram(prog3D);
 
    // フレームバッファの大きさを取得
    int fbWidth, fbHeight;
