テキスト先頭にスキンメッシュアニメーションのシリーズであることを明記

--- a/OpenGL3D_2023_19.md
+++ b/OpenGL3D_2023_19.md
@@ -14,6 +14,8 @@
 
 ### 1.1 複数の関節からの影響を扱う
 
+スケルタル・メッシュ(スキン・メッシュ)を実装する3回シリーズの2回目です。
+
 動きを観察すると、関節の継ぎ目にあるポリゴンだけが伸びていることが分かります。これは、関節番号を実質ひとつしか割り当てていないためです。継ぎ目の前後のポリゴンに関節の影響を与えるには、2つ目の関節を設定する必要があります。
 
 現在のプログラムでは、関節を`1m`間隔で設定しています。そこで、関節の中間(`0.5m`)を境にして、`0.5m`未満ならひとつ下の関節、`0.5m`以上ならひとつ上の関節を、2つ目の関節番号に設定します。
