--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -13,6 +13,8 @@
 
 ### 1.1 トリプルバッファリング
 
+スケルタル・メッシュ(スキン・メッシュ)を実装する3回シリーズの3回目です。
+
 現代のコンピュータシステムでは、CPUがグラフィックス命令をGPUに送り、GPUは送られた命令を順番に実行します。
 
 あるフレームにおいて、CPUが「データをバッファAにコピー」、「バッファAのデータを使って描画」という2つの命令をGPUに送るとします。すると、GPUはコピーが完了するまで待ってから描画を開始します。
