逆転置行列の導出の説明を少しわかりやすくする

--- a/OpenGL3D_2023_18.md
+++ b/OpenGL3D_2023_18.md
@@ -536,15 +536,15 @@ $$
 
 <code>M<sup>T</sup>\*X\*n = s * n</code>(ここで`s`は任意の実数)
 
-仮に`s = 1`とすると、<code>M<sup>T</sup>\*X\*n = n</code>となります。このとき、`X`には<code>M<sup>T</sup></code>を打ち消して単位行列を作る行列が求められます。
+仮に`s = 1`とすると、<code>M<sup>T</sup>\*X\*n = n</code>となります。この式を成立させるには、<code>M<sup>T</sup>\*X</code>が単位行列になっていなくてはなりません。
 
-<code>M<sup>T</sup>\*X\ = I</code>
+<code>M<sup>T</sup>\*X = I</code>
 
-打ち消すといえば逆行列ですね。逆行列を使って`X`に付いて解くと、次の式になります。
+つまり、`X`には「<code>M<sup>T</sup></code>を打ち消して単位行列にするような行列」が求められます。そして、打ち消すといえば逆行列です。逆行列を利用し、上の式を`X`に付いて解くと次の式になります。
 
 <code>X = (M<sup>T</sup>)<sup>-1</sup></code>
 
-つまり、「法線`n`を変換する行列`X`」は「座標`v`を変換する座標変換行列`M`の転置行列の逆行列」になるわけです。
+これが、「法線`n`を変換する行列`X`」は「座標`v`を変換する座標変換行列`M`の転置行列の逆行列」になる理由です。
 
 実際には途中で出てきた「任意の実数`s`」も考慮しなくてはなりません。この`s`は、「逆転置行列によって変換した結果が単位ベクトルになるとは限らない」ことを意味します。もっとも、これは`normalize`関数で正規化すれば解決できます。
 
