--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -1276,7 +1276,7 @@
 
 ### 2.4 手に武器を持たせる
 
-個々までのプログラムで、関節にゲームオブジェクトを割り当てられるようになったはずです。実際に試してみましょう`ExplorationScene.cpp`を開き、テスト用のスケルタルメッシュを設定するプログラムに次のプログラムを追加してください。
+ここまでのプログラムで、関節にゲームオブジェクトを割り当てられるようになったはずです。実際に試してみましょう`ExplorationScene.cpp`を開き、テスト用のスケルタルメッシュを設定するプログラムに次のプログラムを追加してください。
 
 ```diff
      a->AddClip("walk", clipWalk);
